--- a/jovany-cloud/jovany-saas/pom.xml
+++ b/jovany-cloud/jovany-saas/pom.xml
@@ -34,6 +34,11 @@
 				<artifactId>jovany-saas-resource</artifactId>
 				<version>1.0.0</version>
 			</dependency>
+			<dependency>
+				<groupId>jovany-saas</groupId>
+				<artifactId>jovany-saas-starter-sdk</artifactId>
+				<version>1.0.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
