finish large document upload

--- a/jovany-cloud-starters/pom.xml
+++ b/jovany-cloud-starters/pom.xml
@@ -23,5 +23,6 @@
 
 	<modules>
 		<module>jovany-cloud-starter-filestore</module>
+		<module>jovany-cloud-starter-fileupload</module>
 	</modules>
 </project>
